adding pictures, small changes

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../stylesheet/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/x-icon" href="/images/favicon_io/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../images/favicon_io/android-chrome-512x512.png">
     <title> Activities in Oslo </title>
 </head>
 
 <header id="activity-header">
     <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
-    <a href="#" class="img-container">
+    <a href="https://www.visitoslo.com/no/" class="img-container">
         <img id="header-logo-activity" src="../images/favicon_io/android-chrome-192x192.png">
     </a>
     <nav>
-        <a id="search-button-activity" href="https://www.oslomet.no/s?q"><i class="fa fa-search" alt="Søk"></i></a>
+        <a id="search-button-activity" href="https://www.visitoslo.com/"><i class="fa fa-search" alt="Søk"></i></a>
         <div class="dropdown-activity">
             <button class="dropbtn-activity" id="menu-button"><i class="fa fa-bars" alt="Meny"></i></button>
             <div class="dropdown-content-activity" id="dropdown-menu">
@@ -45,10 +45,10 @@
                 </p>
                 <!--Pictures are in 16:9 format-->
                 <div class="scroll-img-container">
-                    <img src="/images/toppic1.jpg" alt="">
-                    <img src="/images/toppic2.jpg" alt="">
-                    <img src="/images/toppic3.jpg" alt="">
-                    <img src="/images/toppic4.jpg" alt="">
+                    <img src="/images/toppic1.jpg" alt="operahuset i oslo">
+                    <img src="/images/toppic2.jpg" alt="seilbåt i oslo">
+                    <img src="/images/toppic3.jpg" alt="byen oslo">
+                    <img src="/images/toppic4.jpg" alt="skihopp oslo">
                 </div>
             </section>
 
@@ -59,13 +59,7 @@
                         viewBox="0 -4 24 24">
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
-
-                    <picture>
-                        <source srcset="/images/clubbing.jpg" media="(min-width: 600px)">
-                        <source srcset="/images/clubbing.jpg" media="(max-width: 599px)">
-                        <img src="../images/clubbing" alt="bilde av uteliv" style="width: 100%;">
-                    </picture>
-
+                    <img src="../images/clubbing.jpg" alt="bilde av uteliv" style="width: 100%;">
                     <p> Utforsk Oslos fantastiske uteliv! Utforsk byens spennende uteliv!
                         Uansett om du liker eksklusive cocktailbarer, livlige klubber eller
                         koselige puber, finnes det noe for enhver smak.
@@ -78,13 +72,7 @@
                         viewBox="0 -4 24 24">
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
-
-                    <picture>
-                        <source srcset="/images/cafe2.jpg" media="(min-width: 600px)">
-                        <source srcset="/images/cafe2.jpg" media="(max-width: 599px)">
-                        <img src="../images/cafe2.jpg" alt="bilde av kaffe" style="width: 100%;">
-                    </picture>
-
+                    <img src="../images/cafe.jpg" alt="bilde av kaffe" style="width: 100%;">
                     <p> Nyt en avslappende stund på en av byens mange kaféer.
                         Enten du foretrekker en kopp kaffe, te, eller kanskje noe
                         søtt ved siden av, finner du et sted som passer din stil.
@@ -97,13 +85,7 @@
                         viewBox="0 -4 24 24">
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
-
-                    <picture>
-                        <source srcset="/images/attractions2.jpg" media="(min-width: 600px)">
-                        <source srcset="/images/attractions2.jpg" media="(max-width: 599px)">
-                        <img src="../images/attractions2.jpg" alt="bilde av attraksjoner" style="width: 100%;">
-                    </picture>
-
+                    <img src="../images/attraction.jpg" alt="bilde av attraksjoner" style="width: 100%;">
                     <p> Oslo er hjem til mange spennende og ikoniske attraksjoner.
                         Byen har mange ikoniske og spennende attraksjoner! Oppdag vakre parker,
                         imponerende museer og historiske monumenter som gir innblikk i kultur og
@@ -117,13 +99,7 @@
                         viewBox="0 -4 24 24">
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
-
-                    <picture>
-                        <source srcset="/images/activities2.jpg" media="(min-width: 600px)">
-                        <source srcset="/images/activities2.jpg" media="(max-width: 599px)">
-                        <img src="../images/activities2.jpg" alt="bilde av aktiviteter" style="width: 100%;">
-                    </picture>
-
+                    <img src="../images/activitypic.jpg" alt="bilde av aktiviteter" style="width: 100%;">
                     <p> Oslo tilbyr et bredt utvalg av aktiviteter for alle aldre og interesser.
                         Det finnes aktiviteter for alle interesser! Fra naturopplevelser i skog
                         og mark til urbane eventyr og sportsaktiviteter – her er det mye å utforske
@@ -137,73 +113,12 @@
                         viewBox="0 -4 24 24">
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
-
-                    <picture>
-                        <source srcset="/images/budget.jpg" media="(min-width: 600px)">
-                        <source srcset="/images/budget.jpg" media="(max-width: 599px)">
-                        <img src="../images/budget.jpg" alt="bilde av budsjettvennlig" style="width: 100%;">
-                    </picture>
-
+                    <img src="../images/budget.jpg" alt="bilde av budsjettvennlig" style="width: 100%;">
                     <p> Oslo trenger ikke å være dyrt! Hvis du er ute etter rimelige opplevelser,
                         finnes det mange steder som tilbyr fantastisk verdi. Oppdag gratis opplevelser,
                         rimelige spiseplasser og vakre utendørsområder som byr på flotte opplevelser.
                     </p>
                 </a>
-            <a href="#kafe" class="category-box">
-                <h2> Kafé </h2>
-                <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
-                    <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                </svg>
-                    <img src="../images/kafe1.jpg" alt="bilde av kafé" style="width: 100%;">
-
-                <p> Nyt en avslappende stund på en av byens mange kaféer.
-                    Enten du foretrekker en kopp kaffe, te, eller kanskje noe
-                    søtt ved siden av, finner du et sted som passer din stil.
-                </p>
-            </a>
-
-            <a href="#attraksjoner" class="category-box">
-                <h2> Attraksjoner </h2>
-                <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
-                    <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                </svg>
-                    <img src="../images/attractionsBg3" alt="bilde av attraksjoner" style="width: 100%;">
-                <p> Oslo er hjem til mange spennende og ikoniske attraksjoner.
-                    Byen har mange ikoniske og spennende attraksjoner! Oppdag vakre parker,
-                    imponerende museer og historiske monumenter som gir innblikk i kultur og
-                    historie.
-                </p>
-            </a>
-
-            <a href="#aktiviteter" class="category-box">
-                <h2> Aktiviteter </h2>
-                <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
-                    <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                </svg>
-                    <img src="../images/activitiesBg4.jpg" alt="bilde av aktiviteter" style="width: 100%;">
-
-                <p> Oslo tilbyr et bredt utvalg av aktiviteter for alle aldre og interesser.
-                    Det finnes aktiviteter for alle interesser! Fra naturopplevelser i skog
-                    og mark til urbane eventyr og sportsaktiviteter – her er det mye å utforske
-                    året rundt.
-                </p>
-            </a>
-
-            <a href="#budsjettvennlig" class="category-box">
-                <h2> Budsjettvennlig </h2>
-                <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
-                    <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
-                </svg>
-                    <img src="../images/kafe1.jpg" alt="bilde av budsjettvennlig" style="width: 100%;">
-
-                <p> Oslo trenger ikke å være dyrt! Hvis du er ute etter rimelige opplevelser,
-                    finnes det mange steder som tilbyr fantastisk verdi. Oppdag gratis opplevelser,
-                    rimelige spiseplasser og vakre utendørsområder som byr på flotte opplevelser.
-                </p>
-            </a>
-
-
-
             </article>
             <script src="../javascript/index-tabs"></script>
 
@@ -215,28 +130,28 @@
                     <!--endre class navn?, neo som mangler..-->
                     <div class="small-img-container">
                         <a href="https://www.handbakt.no/" class="small-img-box">
-                            <img src="../images/budget.jpg" alt="Bilde 1">
-                            <span class="hover-text">HANDBAKT</span>
+                            <img src="../images/anbefalinger-activity1.jpg" alt="Bilde 1">
+                            <span class="hover-text">FUN</span>
                         </a>
                         <a href="https://kumi.no/" class="small-img-box">
-                            <img src="../images/budget.jpg" alt="Bilde 2">
-                            <span class="hover-text">KUMI</span>
+                            <img src="../images/anbefalinger-cafe1.jpg" alt="Bilde 2">
+                            <span class="hover-text">KAFÈ</span>
                         </a>
                         <a href="https://fuglen.no/" class="small-img-box">
-                            <img src="../images/budget.jpg" alt="Bilde 3">
-                            <span class="hover-text">FUGLEN</span>
+                            <img src="../images/anbefalinger-bar1.jpg" alt="Bilde 3">
+                            <span class="hover-text">BAR</span>
                         </a>
                         <a href="https://www.handbakt.no/" class="small-img-box">
-                            <img src="../images/budget.jpg" alt="Bilde 1">
-                            <span class="hover-text">HANDBAKT</span>
+                            <img src="../images/anbefalinger-cafe2.jpg" alt="Bilde 1">
+                            <span class="hover-text">KAFÈ</span>
                         </a>
                         <a href="https://kumi.no/" class="small-img-box">
-                            <img src="../images/budget.jpg" alt="Bilde 2">
-                            <span class="hover-text">KUMI</span>
+                            <img src="../images/anbefalinger-bar2.jpg" alt="Bilde 2">
+                            <span class="hover-text">BAR</span>
                         </a>
                         <a href="https://fuglen.no/" class="small-img-box">
-                            <img src="../images/budget.jpg" alt="Bilde 3">
-                            <span class="hover-text">FUGLEN</span>
+                            <img src="../images/anbefalinger-activity2.jpg" alt="Bilde 3">
+                            <span class="hover-text">FUN</span>
                         </a>
                     </div>
                 </section>
@@ -253,12 +168,12 @@
                     <span id="icon" class="fa fa-map-marker" alt="Map markering"></span>
 
                     <address class="address-font">
-                        <a class="more-info-links" href="#">
-                            <h3>OsloActivities AS</h3>
+                        <a class="more-info-links" href="https://www.visitoslo.com/no/">
+                            <h3>VisitOslo</h3>
                         </a>
                         <p>Hovedkontor:</p>
-                        Solglimtveien 123B
-                        0480 Oslo
+                        Jernbanetorget 1
+                        0154 Oslo
                         Norge
                     </address>
                 </section>
@@ -268,7 +183,7 @@
 
                     <address class="address-font">
                         <h3>Kontakt oss</h3>
-                        <p>Tlf.: 12 34 56 78</p>
+                        <p>Tlf.: 23 10 62 00 </p>
                     </address>
                 </section>
 
@@ -286,37 +201,34 @@
                             </button>
                         </div>
                         <div id="more-info-tab" class="more-info-tabcontent">
-                            <a class="more-info-links" href="#">Arrangementsoversikt</a>
-                            <a class="more-info-links" href="#">Ledige
-                                stillinger</a>
-                            <a class="more-info-links" href="#">Personvernerklæring
-                                og <br> informasjonskapslar</a>
-                            <a class="more-info-links" href="#">Pressekontakt</a>
-                            <a class="more-info-links" href="#">Tilgjengelegheitserklæring</a>
-                            <a class="more-info-links" href="#">Admin</a>
+                            <a class="more-info-links" href="https://www.visitoslo.com/no/nyhetsbrev/">Nyhetsbrev</a>
+                            <a class="more-info-links" href="https://www.visitoslo.com/no/oslo/oslo-guiden/">Oslo
+                                guiden</a>
+                            <a class="more-info-links"
+                                href="https://www.visitoslo.com/no/oslo/praktisk-informasjon/">Praktisk
+                                <br> informasjon</a>
+                            <a class="more-info-links"
+                                href="https://www.visitoslo.com/no/oslo-for-deg/tilgjengelighet/">Tilgjenlighet</a>
                         </div>
                         <script src="../javascript/index-tabs"></script>
                     </span>
                 </section>
             </div>
         </article>
+
         <!-- Social Media links -->
-        <nav class="mediabox">
-
-            <ul class="media">
+        <nav class="mediabox-activity">
+            <ul class="media-activity">
                 <li>
-                    <a href="https://x.com/oslomet" class="fa fa-twitter" alt="Twitter"> </a>
+                    <a href="https://x.com/visitoslo" class="fa fa-twitter" alt="Twitter"></a>
                 </li>
 
                 <li>
-                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook" alt="Facebook"></a>
+                    <a href="https://www.facebook.com/VisitOslo/" class="fa fa-facebook" alt="Facebook"></a>
                 </li>
 
                 <li>
-                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" alt="LinkedIn"></a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" alt="Instagram"></a>
+                    <a href="https://www.instagram.com/visitoslo/" class="fa fa-instagram" alt="Instagram"></a>
                 </li>
             </ul>
         </nav>
