--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -155,10 +155,10 @@
                     <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook" aria-hidden="true" title="Facebook"><span class="sr-only">Facebook</span></a>
                 </li>
                 <li>
-                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" title="LinkedIn"><span class="sr-only">LinkedIn</span></a>
+                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" aria-hidden="true" title="LinkedIn"><span class="sr-only">LinkedIn</span></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" title="Instagram"><span class="sr-only">Instagram</span></a>
+                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" aria-hidden="true" title="Instagram"><span class="sr-only">Instagram</span></a>
                 </li>
             </ul>
         </nav>
