removed links and added kommentar:)

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/x-icon" href="../images/favicon_io/android-chrome-512x512.png">
     <title> Activities in Oslo </title>
+    <!-- Mye av innholdet på denne siden er hentet fra Visit Oslo sine ressurser. Alle linker peker til Visit Oslo. -->
 </head>
 
 <header id="activity-header">
@@ -31,7 +32,6 @@
     </nav>
 </header>
 
-
 <body class="activity">
     <div id="activity-background"></div>
     <main>
@@ -40,6 +40,7 @@
             <section class="activity-main-box" id="aktiviteter">
 
                 <h1 class="header-activity">Utforsk Oslo på en ny måte!</h1>
+                <!--  -->
                 <p>Velkommen til din guide til Oslo,
                     hvor vi har samlet de beste tipsene innen fire spennende kategorier.
                     Enten du er ute etter å oppdage Oslos skjulte perler, finne en hyggelig kafé, oppleve byens
@@ -235,10 +236,6 @@
 
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/visitoslo/" class="fa fa-instagram" alt="Instagram"></a>
-                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" aria-hidden="true"
-                        title="LinkedIn"><span class="sr-only">LinkedIn</span></a>
-                </li>
                 <li>
                     <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" aria-hidden="true"
                         title="Instagram"><span class="sr-only">Instagram</span></a>
