changed structure on all pages, header is now inside body

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -9,29 +9,27 @@
     <link rel="icon" type="image/x-icon" href="../images/favicon_io/android-chrome-512x512.png">
     <title> Activities in Oslo </title>
 </head>
-
-<header id="activity-header">
-    <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
-    <a href="https://www.visitoslo.com/no/" class="img-container">
-        <img id="header-logo-activity" src="../images/favicon_io/android-chrome-192x192.png">
-    </a>
-    <nav>
-        <a id="search-button-activity" href="https://www.visitoslo.com/"><i class="fa fa-search" alt="Søk"></i></a>
-
-        <div class="dropdown-activity">
-            <button class="dropbtn-activity" id="menu-button" aria-hidden="true" title="Navigeringsmeny"><i class="fa fa-bars" aria-hidden="true"></i>
-                <span class="sr-only">Navigeringsmeny</span></button>
-            <div class="dropdown-content-activity" id="dropdown-menu">
-                <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a>
-                <a href="accessibility.html">Accessibility</a>
-                <a href="github.html">Github</a>
-            </div>
-        </div>
-    </nav>
-</header>
-
-
 <body class="activity">
+    <header id="activity-header">
+        <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
+        <a href="https://www.visitoslo.com/no/" class="img-container">
+            <img id="header-logo-activity" src="../images/favicon_io/android-chrome-192x192.png">
+        </a>
+        <nav>
+            <a id="search-button-activity" href="https://www.visitoslo.com/"><i class="fa fa-search" alt="Søk"></i></a>
+    
+            <div class="dropdown-activity">
+                <button class="dropbtn-activity" id="menu-button" aria-hidden="true" title="Navigeringsmeny"><i
+                        class="fa fa-bars" aria-hidden="true"></i>
+                    <span class="sr-only">Navigeringsmeny</span></button>
+                <div class="dropdown-content-activity" id="dropdown-menu">
+                    <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a>
+                    <a href="accessibility.html">Accessibility</a>
+                    <a href="github.html">Github</a>
+                </div>
+            </div>
+        </nav>
+    </header>
     <div id="activity-background"></div>
     <main>
         <article class="category-box-container">
@@ -158,7 +156,7 @@
                     </div>
                 </section>
             </article>
-
+        </article>
     </main>
 
     <!-- Footer Menu -->
@@ -166,7 +164,8 @@
         <article class="more-info">
             <div class="row">
                 <section id="col1">
-                    <span id="icon" class="fa fa-map-marker" aria-hidden="true" title="Map markering" alt="Map markering"><span class="sr-only">Map markering</span></span>
+                    <span id="icon" class="fa fa-map-marker" aria-hidden="true" title="Map markering"
+                        alt="Map markering"><span class="sr-only">Map markering</span></span>
                     <address class="address-font">
                         <a class="more-info-links" href="https://www.visitoslo.com/no/">
                             <h3>VisitOslo</h3>
@@ -179,7 +178,8 @@
                     </address>
                 </section>
                 <section id="col2">
-                    <span id="icon" class="fa fa-phone" aria-hidden="true" title="Telefon"><span class="sr-only">Telefon</span></span>
+                    <span id="icon" class="fa fa-phone" aria-hidden="true" title="Telefon"><span
+                            class="sr-only">Telefon</span></span>
                     <address class="address-font">
                         <h3>Kontakt oss</h3>
                         <p>Tlf.: 23 10 62 00 </p>
@@ -187,11 +187,13 @@
                     </address>
                 </section>
                 <section id="col3">
-                    <span id="icon" class="fa fa-info" aria-hidden="true" title="Info"><span class="sr-only">Info</span></span>
+                    <span id="icon" class="fa fa-info" aria-hidden="true" title="Info"><span
+                            class="sr-only">Info</span></span>
                     <span>
                         <h3> Mer Info</h3>
                         <div class="more-info-tab">
-                            <button id="toggle-tab" class="more-info-tab-button" aria-hidden="true" title="Expand Info Menu"><span class="sr-only">Expand Info Menu</span>
+                            <button id="toggle-tab" class="more-info-tab-button" aria-hidden="true"
+                                title="Expand Info Menu"><span class="sr-only">Expand Info Menu</span>
                                 <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                     viewBox="2 1 20 20" alt=" Nedover pil">
                                     <path fill-rule="evenodd"
@@ -228,13 +230,16 @@
 
                 </li>
                 <li>
-                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" aria-hidden="true" title="LinkedIn"><span class="sr-only">LinkedIn</span></a>
+                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" aria-hidden="true"
+                        title="LinkedIn"><span class="sr-only">LinkedIn</span></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" aria-hidden="true" title="Instagram"><span class="sr-only">Instagram</span></a>
+                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" aria-hidden="true"
+                        title="Instagram"><span class="sr-only">Instagram</span></a>
                 </li>
             </ul>
         </nav>
     </footer>
 </body>
+
 </html>
