--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -9,35 +9,39 @@
     <link rel="icon" type="image/x-icon" href="images\Logo_of_Oslo_Metropolitan_University_ffd500_square.png">
     <title>Accessibility</title>
 </head>
-<header>
-    <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
-    <a href="https://www.oslomet.no/" aria-label="Link til hjemmeside">
-        <img class="header-logo" src="../images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
-    </a>
-    <nav>
-        <a id="search-button" href="https://www.oslomet.no/s?q" aria-hidden="true" title="Søkeknapp"><i class="fa fa-search"></i>
-            <span class="sr-only">Søke-knapp</span></a>
-        <div class="dropdown">
-            <button class="dropbtn" id="menu-button" aria-hidden="true" title="Navigeringsmeny"><i class="fa fa-bars" aria-hidden="true"></i>
-                <span class="sr-only">Navigeringsmeny</span></button>
-            <div class="dropdown-content" id="dropdown-menu">
-                <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a>
-                <a href="activity.html">Activity</a>
-                <a href="github.html">GitHub</a>
-            </div>
-        </div>
-    </nav>
-</header>
-
+ 
 <body>
+    <header>
+        <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
+        <a href="https://www.oslomet.no/" aria-label="Link til hjemmeside">
+            <img class="header-logo" src="../images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
+        </a>
+        <nav>
+            <a id="search-button" href="https://www.oslomet.no/s?q" aria-hidden="true" title="Søkeknapp"><i
+                    class="fa fa-search"></i>
+                <span class="sr-only">Søke-knapp</span></a>
+            <div class="dropdown">
+                <button class="dropbtn" id="menu-button" aria-hidden="true" title="Navigeringsmeny"><i
+                        class="fa fa-bars" aria-hidden="true"></i>
+                    <span class="sr-only">Navigeringsmeny</span></button>
+                <div class="dropdown-content" id="dropdown-menu">
+                    <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a>
+                    <a href="activity.html">Activity</a>
+                    <a href="github.html">GitHub</a>
+                </div>
+            </div>
+        </nav>
+    </header>
     <main>
         <article>
             <section class="flex">
                 <h1>Accessibility</h1>
-                <img class="img-accessibility-split" src="../images/css-media-queries.png" alt="Bilde av CSS media queries">
+                <img class="img-accessibility-split" src="../images/css-media-queries.png"
+                    alt="Bilde av CSS media queries">
                 <p>For å lage en nettside med universell god design, sørget vi for å inkludere alternativ tekst for
                     ikke-tekstlig innhold og
-                    bruke sans-serif-fonter for god lesbarhet. Når det gjelder tekst og farger var vi bevisst på at det er
+                    bruke sans-serif-fonter for god lesbarhet. Når det gjelder tekst og farger var vi bevisst på at det
+                    er
                     viktig å velge en
                     farge som har god kontrast med bakgrunnen for leseligheten. Like viktig er struktur og en behagelig
                     leseopplevelse til
@@ -47,18 +51,22 @@
                     forenklet nettside. For å
                     skape en gjenkjennelig stil må layout og navigasjon være konsekvente på alle sidene unntatt
                     aktivitetssiden, så
-                    navigasjonslinjen og footer er nøyaktig den samme og har i tillegg samme fargepalett. Siden nettsidene
+                    navigasjonslinjen og footer er nøyaktig den samme og har i tillegg samme fargepalett. Siden
+                    nettsidene
                     skal være
-                    brukbare på en rekke skjermstørrelser, brukte vi media queries. Uten bruk av dette ville noen problemer
+                    brukbare på en rekke skjermstørrelser, brukte vi media queries. Uten bruk av dette ville noen
+                    problemer
                     oppstå. For eksempel
                     forskjellen på skjermbredde mellom en telefon og en laptop. Derfor må paddinger, margene og selve
                     strukturen for
                     plassering av noen få elementer, være ulikt på de skjermene. Dermed er det viktig at skjermen er
                     responsiv for å ha en
-                    god visuell opplevelse. Nettsiden sørger også for at innhold vises og fungerer på forutsigbare måter med
+                    god visuell opplevelse. Nettsiden sørger også for at innhold vises og fungerer på forutsigbare måter
+                    med
                     understrekingsfarge og pil-ikoner for å kunne identifisere koblingene korrekt. Vi inkluderte også
                     ikonene inne i footer
-                    for å forbedre forutsigbarheten og i tillegg er boksene store nok slik at man ikke sliter med å trykke
+                    for å forbedre forutsigbarheten og i tillegg er boksene store nok slik at man ikke sliter med å
+                    trykke
                     på riktig boks.
                 </p>
             </section>
@@ -66,13 +74,16 @@
                 <img class="img-accessibility-split" src="../images/html-structure.png" alt="Bilde av HTML struktur">
                 <p>I koden ønsket vi å unngå feil relatert til opening og closing HTML-tags. Ved å bruke konsekvent og
                     tydelig innrykk blir
-                    koden mer lesbar og lett å feilsøke, noe som reduserer risikoen for feil og gjør det enklere for andre
+                    koden mer lesbar og lett å feilsøke, noe som reduserer risikoen for feil og gjør det enklere for
+                    andre
                     utviklere å forstå
-                    og vedlikeholde koden. Vi la også vekt på å sikre at elementene ikke hadde dupliserte attributter, noe
+                    og vedlikeholde koden. Vi la også vekt på å sikre at elementene ikke hadde dupliserte attributter,
+                    noe
                     som kan føre til
                     uforutsigbar oppførsel i nettlesere og påvirke kodenes validitet. I tillegg sørget vi for at alle
                     ID-verdier er unike på
-                    hver side for å sikre at JavaScript og CSS fungerer som forventet. For å forbedre tilgjengeligheten og
+                    hver side for å sikre at JavaScript og CSS fungerer som forventet. For å forbedre tilgjengeligheten
+                    og
                     gjøre designet mer
                     responsivt, brukte vi fleksible måleenheter som em og rem i stedet for faste px-verdier. em og rem
                     tilpasser seg brukerens
@@ -81,19 +92,23 @@
                     enheter. Dette gjør det også enklere for brukere med tilpassede innstillinger, som synshemmede, å
                     navigere og lese
                     innholdet, noe som er et viktig hensyn for universell utforming.</p>
-                </section>
+            </section>
         </article>
 
         <article>
             <h2>Automatisert Wawe Test</h2>
             <img class="img-accessibility" src="../images/wawe-test.png" alt="Bilde av Wawe test resultater">
-            <p>Testen fant noen feil ved rekkefølgen i hierarkiet mellom det siste elementet og footer, det er viktig for å
+            <p>Testen fant noen feil ved rekkefølgen i hierarkiet mellom det siste elementet og footer, det er viktig
+                for å
                 styrke strukturen.
                 En annen feil gjelder med funksjonaliteten ved touchscreen. Siden meny åpnet via hover, vil den åpenbart
                 ikke kunne åpnes. Vi fikset dette ved å gjøre at den åpner ved å trykkes på, og lukkes ved å trykkes på
-                igjen, eller ved å trykke utenfor menyen. Etter å ha fikset all dette nevnt, så gjenstår det 9 varseler. De handler om
-                om denne aria-hidden som gjør at dersom ikonene ikke laster opp og ikke er synlig gir det en tekst isteden. 
-                Itilegg brukes det tooltip. Siden teksten er den samme i begge kan det virke unødvendig, men vi har ingen tekst ved siden
+                igjen, eller ved å trykke utenfor menyen. Etter å ha fikset all dette nevnt, så gjenstår det 9 varseler.
+                De handler om
+                om denne aria-hidden som gjør at dersom ikonene ikke laster opp og ikke er synlig gir det en tekst
+                isteden.
+                Itilegg brukes det tooltip. Siden teksten er den samme i begge kan det virke unødvendig, men vi har
+                ingen tekst ved siden
                 av ikonene. </p>
         </article>
     </main>
@@ -102,7 +117,8 @@
         <article class="more-info">
             <div class="row">
                 <section id="col1">
-                    <span id="icon" class="fa fa-map-marker" aria-hidden="true" title="Map markering" alt="Map markering"><span class="sr-only">Map markering</span></span>
+                    <span id="icon" class="fa fa-map-marker" aria-hidden="true" title="Map markering"
+                        alt="Map markering"><span class="sr-only">Map markering</span></span>
                     <address class="address-font">
                         <a class="more-info-links" href="https://maps.app.goo.gl/KMtNLzg2X4wWKpAG9">
                             <h3>Oslo Metropolitan University</h3>
@@ -113,18 +129,21 @@
                     </address>
                 </section>
                 <section id="col2">
-                    <span id="icon" class="fa fa-phone" aria-hidden="true" title="Telefon"><span class="sr-only">Telefon</span></span>
+                    <span id="icon" class="fa fa-phone" aria-hidden="true" title="Telefon"><span
+                            class="sr-only">Telefon</span></span>
                     <address class="address-font">
                         <h3>Kontakt oss</h3>
                         <p>Tlf.: 67 23 50 00</p>
                     </address>
                 </section>
                 <section id="col3">
-                    <span id="icon" class="fa fa-info" aria-hidden="true" title="Info"><span class="sr-only">Info</span></span>
+                    <span id="icon" class="fa fa-info" aria-hidden="true" title="Info"><span
+                            class="sr-only">Info</span></span>
                     <span>
                         <h3> Mer Info</h3>
                         <div class="more-info-tab">
-                            <button id="toggle-tab" class="more-info-tab-button" aria-hidden="true" title="Expand Info Menu"><span class="sr-only">Expand Info Menu</span>
+                            <button id="toggle-tab" class="more-info-tab-button" aria-hidden="true"
+                                title="Expand Info Menu"><span class="sr-only">Expand Info Menu</span>
                                 <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                     viewBox="2 1 20 20" alt=" Nedover pil">
                                     <path fill-rule="evenodd"
@@ -162,19 +181,24 @@
         <nav class="mediabox">
             <ul class="media">
                 <li>
-                    <a href="https://x.com/oslomet" class="fa fa-twitter" aria-hidden="true" title="Twitter"><span class="sr-only">Twitter</span></a>
+                    <a href="https://x.com/oslomet" class="fa fa-twitter" aria-hidden="true" title="Twitter"><span
+                            class="sr-only">Twitter</span></a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook" aria-hidden="true" title="Facebook"><span class="sr-only">Facebook</span></a>
+                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook" aria-hidden="true"
+                        title="Facebook"><span class="sr-only">Facebook</span></a>
                 </li>
                 <li>
-                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" aria-hidden="true" title="LinkedIn"><span class="sr-only">LinkedIn</span></a>
+                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" aria-hidden="true"
+                        title="LinkedIn"><span class="sr-only">LinkedIn</span></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram"  aria-hidden="true"title="Instagram"><span class="sr-only">Instagram</span></a>
+                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" aria-hidden="true"
+                        title="Instagram"><span class="sr-only">Instagram</span></a>
                 </li>
             </ul>
         </nav>
     </footer>
 </body>
+
 </html>
