--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -9,29 +9,28 @@
     <link rel="icon" type="image/x-icon" href="images\Logo_of_Oslo_Metropolitan_University_ffd500_square.png">
     <title>GitHub</title>
 </head>
-<header>
-    <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
-    <a href="https://www.oslomet.no/" aria-label="Link til hjemmeside">
-        <img class="header-logo" src="../images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
-    </a>
-    <nav>
-        <a id="search-button" href="https://www.oslomet.no/s?q" aria-hidden="true" title="Søkeknapp"><i class="fa fa-search"></i>
-            <span class="sr-only">Søke-knapp</span></a>
-        <div class="dropdown">
-            <button class="dropbtn" id="menu-button" aria-hidden="true" title="Navigeringsmeny"><i class="fa fa-bars" aria-hidden="true"></i>
-                <span class="sr-only">Navigeringsmeny</span></button>
-            <div class="dropdown-content" id="dropdown-menu">
-                <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a>
-                <a href="activity.html">Activity</a>
-                <a href="accessibility.html">Accessibility</a>
-            </div>
-        </div>
-    </nav>
-</header>
-
 <body>
+    <header>
+        <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
+        <a href="https://www.oslomet.no/" aria-label="Link til hjemmeside">
+            <img class="header-logo" src="../images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
+        </a>
+        <nav>
+            <a id="search-button" href="https://www.oslomet.no/s?q" aria-hidden="true" title="Søkeknapp"><i class="fa fa-search"></i>
+                <span class="sr-only">Søke-knapp</span></a>
+            <div class="dropdown">
+                <button class="dropbtn" id="menu-button" aria-hidden="true" title="Navigeringsmeny"><i class="fa fa-bars" aria-hidden="true"></i>
+                    <span class="sr-only">Navigeringsmeny</span></button>
+                <div class="dropdown-content" id="dropdown-menu">
+                    <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a>
+                    <a href="activity.html">Activity</a>
+                    <a href="accessibility.html">Accessibility</a>
+                </div>
+            </div>
+        </nav>
+    </header>
     <div id="site-background"></div>
-    <main>
+    <main> <!-- Her har dere ikke article, differerer ifra de andre sidene -->
         <h1 class="github">Github og GIT</h1>
             <div class="img-container-github">
                 <div class="img-item">
