simplified some id names in tabcontent

--- a/index.html
+++ b/index.html
@@ -84,24 +84,24 @@
 
             <section id="course-info-tabs">
                 <div class="tab">
-                    <button class="tablinks" onclick="openTab(event, 'Studiestart')">Studiestart</button>
-                    <button class="tablinks" onclick="openTab(event, 'Opptakskrav-og-poeng')">Opptakskrav og
+                    <button class="tablinks" onclick="openTab(event, 'studiestart')">Studiestart</button>
+                    <button class="tablinks" onclick="openTab(event, 'opptakskrav-og-poeng')">Opptakskrav og
                         poeng</button>
-                    <button class="tablinks" onclick="openTab(event, 'Slik-søker-du')">Slik søker du</button>
-                    <button class="tablinks" onclick="openTab(event, 'Hva-lærer-du?')">Hva lærer du?</button>
-                    <button class="tablinks" onclick="openTab(event, 'Studiets-oppbygging')">Studiets
+                    <button class="tablinks" onclick="openTab(event, 'slik-søker-du')">Slik søker du</button>
+                    <button class="tablinks" onclick="openTab(event, 'hva-lærer-du')">Hva lærer du?</button>
+                    <button class="tablinks" onclick="openTab(event, 'studiets-oppbygging')">Studiets
                         oppbygging</button>
-                    <button class="tablinks" onclick="openTab(event, 'Hvordan-foregår-undervisningen?')">Hvordan foregår
+                    <button class="tablinks" onclick="openTab(event, 'undervisningen')">Hvordan foregår
                         undervisningen?</button>
-                    <button class="tablinks" onclick="openTab(event, 'Hva-koster-det?')">Hva koster det?</button>
-                    <button class="tablinks" onclick="openTab(event, 'Hva-kan-du-jobbe-som?')">Hva kan du jobbe
+                    <button class="tablinks" onclick="openTab(event, 'hva-koster-det')">Hva koster det?</button>
+                    <button class="tablinks" onclick="openTab(event, 'jobb-muligheter')">Hva kan du jobbe
                         som?</button>
-                    <button class="tablinks" onclick="openTab(event, 'Utveksling')">Utveksling</button>
-                    <button class="tablinks" onclick="openTab(event, 'Videre-studiemuligheter-ved-OsloMet')">Videre
+                    <button class="tablinks" onclick="openTab(event, 'utveksling')">Utveksling</button>
+                    <button class="tablinks" onclick="openTab(event, 'videre-studiemuligheter')">Videre
                         studiemuligheter ved OsloMet</button>
                 </div>
 
-                <div id="Studiestart" class="tabcontent">
+                <div id="studiestart" class="tabcontent">
                     <h2>Studiestart</h2>
                     <p>Informasjon om program, timeplaner, pensum, fadderuker og mye mer finner du på <a
                             class="course-info-links"
@@ -121,7 +121,7 @@
                         studiestart.</p>
                 </div>
 
-                <div id="Opptakskrav-og-poeng" class="tabcontent">
+                <div id="opptakskrav-og-poeng" class="tabcontent">
                     <h2>Opptakskrav og poeng</h2>
                     <p>For å søke på dette programmet må du ha:
                     <ul>
@@ -147,7 +147,7 @@
                     </p>
                 </div>
 
-                <div id="Slik-søker-du" class="tabcontent">
+                <div id="slik-søker-du" class="tabcontent">
                     <h2>Slik søker du</h2>
                     <p>Du søker på Samordna opptak med studiekode 215 503.
                     <ul>
@@ -161,7 +161,7 @@
                     </p>
                 </div>
 
-                <div id="Hva-lærer-du?" class="tabcontent">
+                <div id="hva-lærer-du" class="tabcontent">
                     <h2>Hva lærer du?</h2>
                     <p>
                     <p>Bachelor i matematisk modellering og datavitenskap kobler sammen matematikk, informatikk, fysikk
@@ -221,7 +221,7 @@
                     </p>
                 </div>
                 <!--Studiets-oppbygging er et stort emne, og må ha egne sections-->
-                <div id="Studiets-oppbygging" class="tabcontent">
+                <div id="studiets-oppbygging" class="tabcontent">
 
                     <p id="star-symbol-explainer">
                         <i class="fa fa-star-o" alt="Stjerne"></i>
@@ -929,7 +929,7 @@
                     <!--End of Studietsoppbygging-->
                 </div>
 
-                <div id="Hvordan-foregår-undervisningen?" class="tabcontent">
+                <div id="undervisningen" class="tabcontent">
                     <h2>Hvordan foregår undervisningen?</h2>
                     <p>Undervisningen er en kombinasjon av
                     <ul>
@@ -948,14 +948,14 @@
                     </p>
                 </div>
 
-                <div id="Hva-koster-det?" class="tabcontent">
+                <div id="hva-koster-det" class="tabcontent">
                     <h2>Hva koster det?</h2>
                     <p>Det er ikke studieavgift på dette studiet. <a class="course-info-links"
                             href="https://student.oslomet.no/semesteravgift">Du
                             betaler en semesteravgift hvert semester (student.oslomet.no).</a></p>
                     </div>
 
-                <div id="Hva-kan-du-jobbe-som?" class="tabcontent">
+                <div id="jobb-muligheter class="tabcontent">
                     <h2>Hva kan du jobbe som?</h2>
                     <p>Med dette studiet får du IT-kompetanse som er etterspurt i arbeidslivet, særlig om du velger
                         spesialiseringene vitenskapelige beregninger eller statistiske og datadrevne metoder.
@@ -973,12 +973,12 @@
                     </p>
                 </div>
 
-                <div id="Utveksling" class="tabcontent">
+                <div id="utveksling" class="tabcontent">
                     <h2>Utveksling</h2>
                     <p>Du kan dra på utveksling i femte semester.</p>
                 </div>
 
-                <div id="Videre-studiemuligheter-ved-OsloMet" class="tabcontent">
+                <div id="videre-studiemuligheter" class="tabcontent">
                     <h2>Videre studiemuligheter ved OsloMet</h2>
                     <a class="course-glance-container"
                         href="https://www.oslomet.no/studier/tkd/anvendt-data-informasjonsteknologi">
